--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    user-select: none;
+    background-color: rgba(255, 255, 255, 0.906);
+}
+
+button {
+    color: white;
+}
